// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post component Applies className to outermost element 1`] = `
<div
  className="food"
>
  <h3>
    Hi Roy
  </h3>
  <div>
    Lorem ipsum, etc.
  </div>
</div>
`;

exports[`Post component Matches snapshot with basic props 1`] = `
<div
  className="post-wrapper"
>
  <h3>
    Hi Roy
  </h3>
  <div>
    Lorem ipsum, etc.
  </div>
</div>
`;
